src/types/tests/snapshots/tgbot__types__tests__live_photo__live_photo.snap
---
source: src/types/tests/live_photo.rs
expression: expected_struct.clone()
---
{
  "duration": 1,
  "file_id": "file-id",
  "file_unique_id": "file-unique-id",
  "height": 200,
  "width": 300
}
