src/types/tests/snapshots/tgbot__types__tests__live_photo__send_live_photo-2.snap
---
source: src/types/tests/live_photo.rs
expression: actual_data
---
{
  "allow_paid_broadcast": "true",
  "business_connection_id": "bc-id",
  "callback_query_id": "cqid",
  "caption": "test",
  "chat_id": "1",
  "direct_messages_topic_id": "1",
  "disable_notification": "false",
  "has_spoiler": "false",
  "live_photo": "file-id",
  "message_effect_id": "eid",
  "message_thread_id": "10",
  "parse_mode": "MarkdownV2",
  "photo": "photo-id",
  "protect_content": "true",
  "receiver_user_id": "999",
  "reply_markup": {
    "remove_keyboard": true
  },
  "reply_parameters": {
    "message_id": 1
  },
  "show_caption_above_media": "true",
  "suggested_post_parameters": {}
}
