src/types/tests/snapshots/tgbot__types__tests__live_photo__send_live_photo.snap
---
source: src/types/tests/live_photo.rs
expression: actual_data
---
{
  "chat_id": "1",
  "live_photo": "file-id",
  "photo": "photo-id"
}
